--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-tactile
+theme: jekyll-theme-leap-day
 title: "R en FLACSO 2019"
 description: "Curso de R para Ciencias Sociales. Aplicación practica en la EPH"
 show_downloads: "true"
