--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-tactile
-title: "R en FLACSO 2019"
-description: "Curso de R para Ciencias Sociales. Aplicación practica en la EPH"
+theme: jekyll-theme-leap-day
+title: "Introducción a R para Ciencias Sociales. Aplicación practica en la EPH"
+description: "Materiales del curso"
 show_downloads: "true"
