--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,5 @@ title: "Introducción a R para Ciencias Sociales. Aplicación practica en la EPH
 description: "R en FLACSO"
 show_downloads: "true"
 google_analytics: UA-122515754-2
+github:
+  is_project_page: false
