--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
 theme: jekyll-theme-cayman
 title: "Introducción a R para Ciencias Sociales. Aplicación practica en la EPH"
 description: "R en FLACSO"
-show_downloads: "true"
+show_downloads: "false"
 google_analytics: UA-122515754-2
-github:
-  is_project_page: false
+
