--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,4 @@ theme: jekyll-theme-cayman
 title: "Introducción a R para Ciencias Sociales. Aplicación practica en la EPH"
 description: "R en FLACSO"
 google_analytics: UA-122515754-2
+show_downloads: true
